Added work with roles and modified work with JWT-token